--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <header>
   <div class="header-title">
     <a href="{{ .Site.LanguagePrefix }}/"
-      >{{ or .Site.Params.headTitle .Site.Author.name }}</a
+      >How To Be Free</a
     >
   </div>
   <div class="header-subtitle">{{ .Site.Params.Description }}</div>
